--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
   </head>
   <body>
     <div class="wrapper">
+      <header class="header">
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item"><a href="javascript:void(0)" class="nav__link">About us</a></li>
+            <li class="nav__item"><a href="javascript:void(0)" class="nav__link">Work</a></li>
+            <li class="nav__item"><a href="index.html" class="nav__link">
+              <img src="images/yebo-logo.png" alt="yebo" class="nav__logo">
+            </a></li>
+            <li class="nav__item"><a href="javascript:void(0)" class="nav__link">Shop</a></li>
+            <li class="nav__item"><a href="javascript:void(0)" class="nav__link">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
     </div>
   </body>
 </html>
