css style for block features

--- a/index.html
+++ b/index.html
@@ -24,6 +24,66 @@
           </ul>
         </nav>
       </header>
+      <div class="feature">
+        <div class="feature__header">
+          <img src="images/icon1.png" alt="" class="feature__img-top">
+          <h2 class="feature__heading">A NEW GENERATION OF VINTAGE BIKE</h2>
+          <p class="feature__header-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+        </div>
+          <ul>
+            <li class="feature__item">
+              <div class="feature__item-img">
+                <img src="images/img14.jpg" alt="" class="img__bg">
+                <img src="images/img-bicycle-company.png" alt="" class="img__brand">
+              </div>
+              <div class="feature__item-content">
+                <div class="feature__item-content-top">
+                  <img src="images/icon2.png" alt="" class="feature__img-top">
+                  <h3 class="feature__heading">Vintage Oliva</h3>
+                  <p class="feature__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</p>
+                </div>
+                <div class="feature__item-content-bottom">
+                  <img src="images/img1.jpg" alt="" class="img__bg">
+                </div>
+              </div>
+            </li>
+            <li class="feature__item">
+              <div class="feature__item-img">
+                <img src="images/img3.jpg" alt="" class="img__bg">
+                <img src="images/img-vintage.png" alt="" class="img__brand">
+              </div>
+              <div class="feature__item-content">
+                <div class="feature__item-content-top">
+                  <img src="images/icon3.png" alt="" class="feature__img-top">
+                  <h3 class="feature__heading">La Boriosa</h3>
+                  <p class="feature__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</p>
+                </div>
+                <div class="feature__item-content-bottom">
+                  <img src="images/img5.jpg" alt="" class="img__bg">
+                </div>
+              </div>
+            </li>
+            <li class="feature__item">
+              <div class="feature__item-img">
+                <img src="images/img7.jpg" alt="" class="img__bg">
+                <img src="images/img-bicycle-text.png" alt="" class="img__brand">
+              </div>
+              <div class="feature__item-content">
+                <div class="feature__item-content-top">
+                  <img src="images/icon4.png" alt="" class="feature__img-top">
+                  <h3 class="feature__heading">Vintage Oliva</h3>
+                  <p class="feature__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</p>
+                </div>
+                <div class="feature__item-content-bottom">
+                  <img src="images/img9.jpg" alt="" class="img__bg">
+                </div>
+              </div>
+              <div class="feature__item-img">
+                <img src="images/img8.jpg" alt="" class="img__bg">
+              </div>
+            </li>
+          </ul>
+      </div>
     </div>
   </body>
 </html>
