css styles for block tweet and block images

--- a/index.html
+++ b/index.html
@@ -84,6 +84,92 @@
             </li>
           </ul>
       </div>
+      <div class="tweet">
+        <i class="fab fa-twitter tweet__icon"></i>
+        <h2 class="tweet__heading">
+          <span class="tweet__location">AOD New York</span>
+          <span class="tweet__author">@aod</span>
+          <time class="tweet__time">35min</time>
+        </h2>
+        <p class="tweet__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore sint modi ea, debitis molestias nostrum quod delectus, autem eaque fugit veniam labore veritatis praesentium ducimus nesciunt. Ducimus, architecto dolorum est.</p>
+        <ul class="tweet__pagi">
+          <li class="tweet__pagi-item is-active"></li>
+          <li class="tweet__pagi-item"></li>
+          <li class="tweet__pagi-item"></li>
+        </ul>
+      </div>
+     <ul class="images">
+        <li class="images__block">
+          <div class="images__block-item">
+            <div class="images__item">
+              <img src="images/img10.jpg" alt="" class="images__item-bg">
+              <div class="images__item-brand">
+                <img src="images/img-bicycle-sm.png" alt="">
+                <h3 class="images__item-text">Shop now</h3>
+              </div>
+            </div>
+            <div class="images__item">
+              <img src="images/img11.jpg" alt="" class="images__item-bg">
+              <div class="images__item-brand">
+                <img src="images/img-bicycle-sm.png" alt="">
+                <h3 class="images__item-text">Shop now</h3>
+              </div>
+            </div>
+          </div>
+          <div class="images__block-item">
+             <div class="images__item">
+              <img src="images/img12.jpg" alt="" class="images__item-bg">
+              <div class="images__item-brand">
+                <img src="images/img-bicycle-sm.png" alt="">
+                <h3 class="images__item-text">Shop now</h3>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="images__block">
+          <div class="images__item">
+              <img src="images/img13.jpg" alt="" class="images__item-bg">
+              <div class="images__item-brand">
+                <img src="images/img-bicycle-sm.png" alt="">
+                <h3 class="images__item-text">Shop now</h3>
+              </div>
+            </div>
+            <div class="images__item">
+              <img src="images/img0.jpg" alt="" class="images__item-bg">
+              <div class="images__item-brand">
+                <img src="images/img-bicycle-sm.png" alt="">
+                <h3 class="images__item-text">Shop now</h3>
+              </div>
+            </div>
+        </li>
+        <li class="images__block">
+          <div class="images__block-item">
+            <div class="images__item">
+              <img src="images/img2.jpg" alt="" class="images__item-bg">
+              <div class="images__item-brand">
+                <img src="images/img-bicycle-sm.png" alt="">
+                <h3 class="images__item-text">Shop now</h3>
+              </div>
+            </div>
+            <div class="images__item">
+              <img src="images/img4.jpg" alt="" class="images__item-bg">
+              <div class="images__item-brand">
+                <img src="images/img-bicycle-sm.png" alt="">
+                <h3 class="images__item-text">Shop now</h3>
+              </div>
+            </div>
+          </div>
+          <div class="images__block-item">
+             <div class="images__item">
+              <img src="images/img6.jpg" alt="" class="images__item-bg">
+              <div class="images__item-brand">
+                <img src="images/img-bicycle-sm.png" alt="">
+                <h3 class="images__item-text">Shop now</h3>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
