css styles for block discover and block mail

--- a/index.html
+++ b/index.html
@@ -170,6 +170,17 @@
           </div>
         </li>
       </ul>
+      <div class="discover">
+        <a href="javascript:void(0)" class="discover__btn">Discover the shop</a>
+      </div>
+      <div class="mail">
+        <img src="images/yebo-logo.png" alt="" class="mail__logo">
+        <span class="mail__text">Stay on the saddle!</span>
+        <form action="javascript:void(0)" class="mail__form" autocomplete="off">
+          <input type="email" name="email" class="mail__form-inp" placeholder="enter your email..." autofocus>
+          <button class="mail__form-btn">Go</button>
+        </form>
+      </div>
     </div>
   </body>
 </html>
